DuPont DevSB/src/objects/SiteObject__c.object
<CustomObject>
    <description>This abstract object is a site element that could be one of many types (i.e. subscription center, subscription list, form, subform, formfield, call script)</description>
    <fields>
        <fullName>Access_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User authorized to approve request for portal access</description>
        <inlineHelpText>User authorized to request for portal access</inlineHelpText>
        <label>Access Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SiteAccessApprover</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CAPTCHA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>require CAPTCHA validation on the form (uses reCAPTCHA for sitescript)</description>
        <inlineHelpText>require CAPTCHA validation on the form.</inlineHelpText>
        <label>CAPTCHA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>lookup to a campaign</description>
        <inlineHelpText>Campaign related to this site object</inlineHelpText>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Site Objects</relationshipLabel>
        <relationshipName>Site_Objects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Short internal description</description>
        <inlineHelpText>Internal description of this Site Object</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>for subscription List the ExternalId = (OrgId+CampaignId)</description>
        <externalId>true</externalId>
        <inlineHelpText>System Unique identifier for OrgId+CampaignId</inlineHelpText>
        <label>ExternalId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <description>Public Group used for access to Portal or Site Content (note: this field is used as metadata to populate SFAR - Create Portal User from Portal Access Request wizard)</description>
        <inlineHelpText>Public group that allows access to the Portal Workspace Permissions</inlineHelpText>
        <label>Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Active Status of Site Object
Portal - determines if the Portal is available for granting access.</description>
        <inlineHelpText>Active Status of Site Object
Portal - determines if the Portal is available for granting access.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsPublic__c</fullName>
        <defaultValue>true</defaultValue>
        <description>TRUE if this Site Object can be publicly displayed externally (e.g. a Subscription Center)</description>
        <inlineHelpText>TRUE if this Site Object can be publicly displayed externally (e.g. a Subscription Center)</inlineHelpText>
        <label>IsPublic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Key_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Key User responsible for managing access to an application or asset (note: field is used as metadata for SFAR - Create Portal User from Portal Access Request wizard)</description>
        <label>Key User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SiteKeyUser</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated. Its is case sensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>License_Type__c</fullName>
        <description>Type of License required for access to an application or portal or community (i.e. Salesforce.com)
(note: field is used as metadata for SFAR-Create Portal User from Access Request wizard on a Contact)</description>
        <inlineHelpText>Type of License this user requires</inlineHelpText>
        <label>License Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Partner Community</fullName>
                </value>
                <value>
                    <fullName>Gold Partner</fullName>
                </value>
                <value>
                    <fullName>Customer Portal Manager Custom</fullName>
                </value>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
                <value>
                    <fullName>Customer Portal Manager Standard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NewRecordOwnerId__c</fullName>
        <description>User or Queue Id of Owner</description>
        <inlineHelpText>User or Queue Id of Owner</inlineHelpText>
        <label>New Record OwnerId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewRecordTypeId__c</fullName>
        <description>RecordType Id used for new records created from this SiteObject (e.g. New Leads in a Subscription Center)
Supported Site Object Types: Subscription Center&quot;</description>
        <inlineHelpText>RecordType Id used for new records created from this SiteObject (e.g. New Leads in a Subscription Center)</inlineHelpText>
        <label>New Record TypeId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owning_Business__c</fullName>
        <description>Owning Business of the Site Object Record</description>
        <label>Owning Business</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Industrial Biosciences</fullName>
                </value>
                <value>
                    <fullName>Building Innovations</fullName>
                </value>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>Crop Protection</fullName>
                </value>
                <value>
                    <fullName>DuPont Chemicals &amp; Fluoroproducts</fullName>
                </value>
                <value>
                    <fullName>DuPont Protection Technologies</fullName>
                </value>
                <value>
                    <fullName>DuPont Sustainable Solutions</fullName>
                </value>
                <value>
                    <fullName>Electronics &amp; Communications</fullName>
                </value>
                <value>
                    <fullName>Nutrition &amp; Health</fullName>
                </value>
                <value>
                    <fullName>Packaging &amp; Industrial Polymers</fullName>
                </value>
                <value>
                    <fullName>Performance Polymers</fullName>
                </value>
                <value>
                    <fullName>Pioneer</fullName>
                </value>
                <value>
                    <fullName>Solae</fullName>
                </value>
                <value>
                    <fullName>Titanium Technologies</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Owning_Organization__c</fullName>
        <label>Owning Organization</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AGCP-CPC</fullName>
                </value>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>BI-Env</fullName>
                </value>
                <value>
                    <fullName>BI-Landscape Systems</fullName>
                </value>
                <value>
                    <fullName>BI-Surf</fullName>
                </value>
                <value>
                    <fullName>DEC-Packaging Graphics</fullName>
                </value>
                <value>
                    <fullName>DPP-Parts</fullName>
                </value>
                <value>
                    <fullName>DPP-Polymers</fullName>
                </value>
                <value>
                    <fullName>DPT</fullName>
                </value>
                <value>
                    <fullName>DPT-A&amp;HF</fullName>
                </value>
                <value>
                    <fullName>DPT-Agriculture</fullName>
                </value>
                <value>
                    <fullName>DPT-Air and Filtration</fullName>
                </value>
                <value>
                    <fullName>DPT-Aramids</fullName>
                </value>
                <value>
                    <fullName>DPT-ASPS</fullName>
                </value>
                <value>
                    <fullName>DPT-Chemical Industrial</fullName>
                </value>
                <value>
                    <fullName>DPT-Cleanroom/Pharma</fullName>
                </value>
                <value>
                    <fullName>DPT-Critical Clean</fullName>
                </value>
                <value>
                    <fullName>DPT-Envelopes</fullName>
                </value>
                <value>
                    <fullName>DPT-Graphics</fullName>
                </value>
                <value>
                    <fullName>DPT - IPP</fullName>
                </value>
                <value>
                    <fullName>DPT-Mechanical Industrial</fullName>
                </value>
                <value>
                    <fullName>DPT-Medical Fabrics</fullName>
                </value>
                <value>
                    <fullName>DPT-Medical Packaging</fullName>
                </value>
                <value>
                    <fullName>DPT-Medical Specialties</fullName>
                </value>
                <value>
                    <fullName>DPT-NOW</fullName>
                </value>
                <value>
                    <fullName>DPT-Optical</fullName>
                </value>
                <value>
                    <fullName>DPT-PM</fullName>
                </value>
                <value>
                    <fullName>DPT-Public Sector-ER</fullName>
                </value>
                <value>
                    <fullName>DPT-Public Sector-LE</fullName>
                </value>
                <value>
                    <fullName>DPT-Public Sector-MIL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Profile__c</fullName>
        <description>User Profile</description>
        <label>Profile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <label>Program</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>DEC-PG</fullName>
                </value>
                <value>
                    <fullName>DPP-Parts</fullName>
                </value>
                <value>
                    <fullName>DPP-Poly</fullName>
                </value>
                <value>
                    <fullName>DPT</fullName>
                </value>
                <value>
                    <fullName>DPT - IPP</fullName>
                </value>
                <value>
                    <fullName>IB</fullName>
                </value>
                <value>
                    <fullName>PHI</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PublicDescription__c</fullName>
        <description>Short description visible to external audience</description>
        <inlineHelpText>Short description visible to external audience</inlineHelpText>
        <label>Public Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PublicName__c</fullName>
        <description>Default Public name for this Site Object</description>
        <inlineHelpText>Default Public name for this Site Object</inlineHelpText>
        <label>Public Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReturnUrl__c</fullName>
        <description>used for Subscription centers and is used as the redirect when after center update is submitted</description>
        <inlineHelpText>URL displayed after the successful completion of a Site Submit in this Site Object</inlineHelpText>
        <label>ReturnUrl</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Roles__c</fullName>
        <description>Portal User Roles</description>
        <label>Roles</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Executive</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>User</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SiteScript__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to a SiteScript</description>
        <label>SiteScript</label>
        <referenceTo>SFDC_Script__c</referenceTo>
        <relationshipLabel>Site Objects</relationshipLabel>
        <relationshipName>Site_Objects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SubForm__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used in the Center to indicate the Subform to use for both MyProfile and &apos;this is not my email&apos;</description>
        <inlineHelpText>Used in the Center to indicate the Subform to use for both MyProfile and &apos;this is not my email&apos;</inlineHelpText>
        <label>SubForm</label>
        <referenceTo>SiteObject__c</referenceTo>
        <relationshipLabel>Centers using this Subform</relationshipLabel>
        <relationshipName>Site_Objects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tags__c</fullName>
        <description>Internal tags used to classify Site Objects and/or automatically display external lists of Site objects</description>
        <inlineHelpText>Use Global for this Site Object to be displayed in the Global external directory</inlineHelpText>
        <label>Tags</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Global</fullName>
                    <default>true</default>
                    <label>Global</label>
                </value>
                <value>
                    <fullName>TEST Tag</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type of Site Object</description>
        <inlineHelpText>Type of Site Object</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Call Script</fullName>
                </value>
                <value>
                    <fullName>CLS Translation</fullName>
                </value>
                <value>
                    <fullName>Customer Portal</fullName>
                </value>
                <value>
                    <fullName>Form</fullName>
                </value>
                <value>
                    <fullName>Lead Field</fullName>
                </value>
                <value>
                    <fullName>Lead SubForm</fullName>
                </value>
                <value>
                    <fullName>Partner Portal</fullName>
                </value>
                <value>
                    <fullName>SiteScript</fullName>
                </value>
                <value>
                    <fullName>SiteScript with Attachment</fullName>
                </value>
                <value>
                    <fullName>Subscription Center</fullName>
                </value>
                <value>
                    <fullName>Subscription List</fullName>
                </value>
                <value>
                    <fullName>Translation Label</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Url__c</fullName>
        <description>Url of the Site Object</description>
        <label>Url</label>
        <type>Url</type>
    </fields>
    <label>Site Object</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>ReturnUrl__c</columns>
        <columns>PublicName__c</columns>
        <columns>Profile__c</columns>
        <columns>Program__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Owning_Organization__c</columns>
        <columns>Owning_Business__c</columns>
        <columns>CAPTCHA__c</columns>
        <columns>Program__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CLS_Translation</fullName>
        <columns>NAME</columns>
        <columns>Owning_Business__c</columns>
        <columns>Owning_Organization__c</columns>
        <columns>PublicDescription__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>CLS Translation</value>
        </filters>
        <label>CLS Translation (Products &amp; Offerings)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CPC_Forms</fullName>
        <columns>NAME</columns>
        <columns>Campaign__c</columns>
        <columns>CAPTCHA__c</columns>
        <columns>ExternalId__c</columns>
        <columns>Owning_Business__c</columns>
        <columns>Owning_Organization__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>SiteObject__c.Contact_Us</value>
        </filters>
        <filters>
            <field>Owning_Business__c</field>
            <operation>equals</operation>
            <value>Crop Protection</value>
        </filters>
        <label>Crop Protection Forms</label>
        <language>en_US</language>
        <sharedTo>
            <group>SFDCAdminSupport787141</group>
            <group>SFDCCRMDPT</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Contact_Us_Sites</fullName>
        <columns>NAME</columns>
        <columns>ExternalId__c</columns>
        <columns>Campaign__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CAPTCHA__c</columns>
        <columns>Owning_Business__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>SiteObject__c.Contact_Us</value>
        </filters>
        <label>Contact Us Sites</label>
        <language>en_US</language>
        <sharedTo>
            <group>APEngagementLeader</group>
            <group>EMEAEngagementLeader</group>
            <group>LAEngagementLeader</group>
            <group>NAEngagementLeader</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Gerard_Centers</fullName>
        <columns>NAME</columns>
        <columns>PublicName__c</columns>
        <columns>Owning_Organization__c</columns>
        <columns>Type__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Subscription Center</value>
        </filters>
        <label>Centers</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Gerard_Lists</fullName>
        <columns>NAME</columns>
        <columns>Campaign__c</columns>
        <columns>PublicName__c</columns>
        <columns>Type__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Subscription List</value>
        </filters>
        <label>Lists</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Gerard_Subforms</fullName>
        <columns>NAME</columns>
        <columns>Campaign__c</columns>
        <columns>PublicName__c</columns>
        <columns>Type__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Lead SubForm</value>
        </filters>
        <label>Subforms</label>
    </listViews>
    <listViews>
        <fullName>Memberportals_Site_Scripts</fullName>
        <columns>NAME</columns>
        <columns>PublicName__c</columns>
        <columns>IsPublic__c</columns>
        <columns>CAPTCHA__c</columns>
        <columns>SiteScript__c</columns>
        <columns>Type__c</columns>
        <columns>Campaign__c</columns>
        <columns>ExternalId__c</columns>
        <columns>PublicDescription__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>SiteObject__c.MemberPortal</value>
        </filters>
        <label>Memberportals / Site Scripts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Portal_Site_Records_Active</fullName>
        <columns>NAME</columns>
        <columns>Access_Approver__c</columns>
        <columns>Key_User__c</columns>
        <columns>Program__c</columns>
        <columns>Type__c</columns>
        <columns>Url__c</columns>
        <columns>IsActive__c</columns>
        <columns>Owning_Business__c</columns>
        <columns>License_Type__c</columns>
        <columns>Owning_Organization__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>SiteObject__c.Portal</value>
        </filters>
        <filters>
            <field>IsActive__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Portal or Community Site Records</label>
        <language>en_US</language>
        <sharedTo>
            <group>SFDCAdminSupport787141</group>
            <group>SFDCCRMEngagementTeams</group>
            <group>SFDCDevelopers</group>
            <group>SFDCDuPontSystemAdministrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Portal_Site_Records_InActive</fullName>
        <columns>NAME</columns>
        <columns>Access_Approver__c</columns>
        <columns>Key_User__c</columns>
        <columns>Program__c</columns>
        <columns>Type__c</columns>
        <columns>Url__c</columns>
        <columns>IsActive__c</columns>
        <columns>Owning_Business__c</columns>
        <columns>License_Type__c</columns>
        <columns>Owning_Organization__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>SiteObject__c.Portal</value>
        </filters>
        <filters>
            <field>IsActive__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>InActive Portal_Community Site Records</label>
        <language>en_US</language>
        <sharedTo>
            <group>SFDCAdminSupport787141</group>
            <group>SFDCCRMEngagementTeams</group>
            <group>SFDCDevelopers</group>
            <group>SFDCDuPontSystemAdministrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SSL_Site_Objects</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>ExternalId__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ExternalId__c</field>
            <operation>contains</operation>
            <value>https</value>
        </filters>
        <label>SSL Site Objects</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Subscriber_List</fullName>
        <columns>NAME</columns>
        <columns>PublicName__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>IsPublic__c</columns>
        <columns>Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>SiteObject__c.SubscriberList</value>
        </filters>
        <label>Subscriber List</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Translation_Labels</fullName>
        <columns>NAME</columns>
        <columns>Owning_Business__c</columns>
        <columns>Owning_Organization__c</columns>
        <columns>PublicDescription__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Translation Label</value>
        </filters>
        <label>Translation Labels</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Web_Form_Site_Objects</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>ExternalId__c</columns>
        <columns>CAPTCHA__c</columns>
        <columns>Owning_Business__c</columns>
        <columns>Owning_Organization__c</columns>
        <columns>Program__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>SiteObject__c.Contact_Us</value>
        </filters>
        <label>Web Form Site Objects</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Site Objects</pluralLabel>
    <recordTypes>
        <fullName>Contact_Us</fullName>
        <active>true</active>
        <description>DuPont.com Contact Us Form</description>
        <label>Contact Us</label>
    </recordTypes>
    <recordTypes>
        <fullName>MemberPortal</fullName>
        <active>true</active>
        <description>Member Portal a single function portal that uses a simple key for authentication</description>
        <label>Member Portal</label>
    </recordTypes>
    <recordTypes>
        <fullName>Portal</fullName>
        <active>true</active>
        <description>SiteObject record contains Portal access elements</description>
        <label>Portal</label>
    </recordTypes>
    <recordTypes>
        <fullName>SubForm</fullName>
        <active>true</active>
        <label>SubForm</label>
    </recordTypes>
    <recordTypes>
        <fullName>SubscriberList</fullName>
        <active>true</active>
        <description>Subscriber List</description>
        <label>Subscriber List</label>
    </recordTypes>
    <recordTypes>
        <fullName>Subscription_Center</fullName>
        <active>true</active>
        <label>Subscription Center</label>
    </recordTypes>
    <recordTypes>
        <fullName>System_Admin</fullName>
        <active>false</active>
        <label>System Admin</label>
    </recordTypes>
    <recordTypes>
        <fullName>Translation</fullName>
        <active>true</active>
        <description>Translation of the Public Name and Description</description>
        <label>Translation</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Subscriber_List_Validation</fullName>
        <active>true</active>
        <description>check that if a campaign has been populated that the external id = the org+campaignid</description>
        <errorConditionFormula>$RecordType.DeveloperName == &apos;SubscriberList&apos; &amp;&amp; 
( NOT(ISBLANK(Campaign__c)) &amp;&amp;   ExternalId__c  != $Organization.Id+Campaign__c )</errorConditionFormula>
        <errorDisplayField>ExternalId__c</errorDisplayField>
        <errorMessage>Unexpected External Id.  This field should match the OrgId + campaignId if a campaign is populated.   To Delete a Subscriber List Campaign,  you must first remove reference to the campaign and clear the externalid from the referencing SiteObject.</errorMessage>
    </validationRules>
</CustomObject>